# uv-simple

./: README.md  pyproject.toml
src/uv_simple/: __init__.py
