[project]
name = "uv-simple"
version = "0.1.0"
description = "uv package simple template"
readme = "README.md"
authors = [
    { name = "xa2n", email = "emergenceappdev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
uv-simple = "uv_simple.main:greet"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
